tests/value/value.exp
Error: value.js:3
  3: var y:string = o["x"];
                    ^^^^^^ number. This type is incompatible with
  3: var y:string = o["x"];
           ^^^^^^ string

Error: value.js:6
  6: table["x"] = "hello";
                  ^^^^^^^ string [1] is incompatible with number [2].
  References:
    6: table["x"] = "hello";
                    ^^^^^^^ [1]: string
    6: table["x"] = "hello";
       ^^^^^^^^^^ [2]: number


Found 2 errors
